Fix 404 error page: remove z-index and transform breaking button and layout

--- a/static/css/mainResponsive.css
+++ b/static/css/mainResponsive.css
@@ -738,7 +738,6 @@
         padding: 132px 0px 0px;
     }
     .error-content img {
-        transform: translate(66px, 25px);
         width: 200.451px;
         height: 352.932px;
     }
